# uk-nprg041-project

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  client.cpp  main.cc  main.cpp
src/http/: application.h  exception.h  exceptions.h  http.h  message.h  message_factory.h  messages.h  messages_factory.h  server.h  uri.h
src/net/: poll.h  sockets.h  sockets_linux.cpp  sockets_unix.cpp  sockets_win32.cpp  tcp.h  tcp_linux.cpp  tcp_unix.cpp  tcp_win32.cpp
src/sockets/: Socket.h  Socket_unix.cc  Socket_win32.cc
src/utils/: exception.h  utils.cpp  utils.h
