if(WIN32)
    FILE(GLOB NET_SRC net/*_win32.cpp)
elseif(UNIX)
    FILE(GLOB NET_SRC net/*_unix.cpp)
else()
    message(FATAL_ERROR "Unsupported platform ${CMAKE_SYSTEM_NAME}")
endif()

add_library(net ${NET_SRC})
add_executable(main main.cpp)
add_executable(client client.cpp)
target_link_libraries(main net)
target_link_libraries(client net)
