if(CMAKE_SYSTEM_NAME STREQUAL "Windows")
    FILE(GLOB NET_SRC net/*_win32.cpp)
elseif(CMAKE_SYSTEM_NAME STREQUAL "Linux")
    FILE(GLOB NET_SRC net/*_linux.cpp)
else()
    message(FATAL_ERROR "Unsupported platform ${CMAKE_SYSTEM_NAME}")
endif()

FILE(GLOB UTILS_SRC utils/*.cpp)
add_library(utils ${UTILS_SRC})
add_library(net ${NET_SRC})
add_executable(main main.cpp)
add_executable(client client.cpp)
target_link_libraries(main net utils)
target_link_libraries(client net utils)
